/**
 * User proto file
 */

syntax = "proto3";

import "comments.proto";

option go_package = "github.com/iLopezosa/api-wars/grpc/pb";

service PostsService {
  rpc ListPosts(ListPostsRequest) returns (ListPostsResponse);
  rpc GetPost(GetPostRequest) returns (GetPostResponse);
  rpc CreatePost(CreatePostRequest) returns (CreatePostResponse);
  rpc UpdatePost(UpdatePostRequest) returns (UpdatePostResponse);
  rpc DeletePost(DeletePostRequest) returns (DeletePostResponse);
  rpc GetPostsComments(GetPostsCommentsRequest) returns (GetPostsCommentsResponse);
}

message PostDTO {
  uint64 id = 1;
  string title = 2;
  string content = 3;
  uint64 user_id = 4;
  string created_at = 5;
  string updated_at = 6;
}

message ListPostsRequest {
  uint64 user_id = 1;
}

message ListPostsResponse {
  repeated PostDTO posts = 1;
}

message GetPostRequest {
  uint64 id = 1;
}

message GetPostResponse {
  PostDTO post = 1;
}

message CreatePostRequest {
  string title = 1;
  string content = 2;
  uint64 user_id = 3;
}

message CreatePostResponse {
  PostDTO post = 1;
}

message UpdatePostRequest {
  uint64 id = 1;
  string title = 2;
  string content = 3;
  uint64 user_id = 4;
}

message UpdatePostResponse {
  PostDTO post = 1;
}

message DeletePostRequest {
  uint64 id = 1;
}

message DeletePostResponse {
  bool deleted = 1;
}

message GetPostsCommentsRequest {
  uint64 post_id = 1;
}

message GetPostsCommentsResponse {
  repeated CommentDTO comments = 1;
}